# RustWork

./: README.md
MonitorSystemOPs/: Cargo.toml  README.md
MonitorSystemOPs/config/: config.toml
MonitorSystemOPs/scripts/: install_service.bat  uninstall.bat
MonitorSystemOPs/src/: config.rs  main.rs  monitor.rs  notification.rs  security.rs  service_manager.rs  storage.rs
MonitorSystemOPs/static/: app.js  simple_index.html  style.css
TekstRedactor/: Cargo.toml  README.md
TekstRedactor/src/: app.rs  document.rs  main.rs  settings.rs
