[package]
name = "MonitorSystemOPs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
windows-service = "0.6.0"
base64 = "0.21.0"